--- a/css/css.css
+++ b/css/css.css
@@ -77,9 +77,36 @@
     font-weight: bold;
  }
 
- #produktinformationId {
-  
+ #butikkerId {
+  text-decoration: underline;
  }
+
+ #prisId {
+  font-family: Poppins, sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+  color: #231F20;
+ }
+
+ #laegVareIKurvId {
+  width: 33%;
+  height: auto;
+ }
+
+ /* BRUGT TIL AT LAVE BILLEDET LEVERINGSMULIGHEDER
+ #test {
+  font-family: Poppins, sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+ }
+ */
+
+ #leveringsmulighederId {
+  width: 15%;
+  height: auto;
+ }
+
+ 
 
 
  
