--- a/css/css.css
+++ b/css/css.css
@@ -7,6 +7,7 @@
  :root {
   --tekstfarve: rgb(0, 0, 0);
   --beskrivelsesTekst: rgb(35, 31, 32);
+  --tilgaengeligIkon: rgb(101, 193, 121); 
  }
 
 /* Use your variables on elements */
@@ -17,12 +18,12 @@
  .header {
   display: flex;
   justify-content: space-between;
-  padding: 16px 200px 20px;
+  padding: 16px 100px 20px;
  }
 
  #sallingLogoId {
-  width: 150px;
-  height: 62px;
+  width: 150px; /* 150px */
+  height: 62px; /* 62 */
  }
 
  #soegebarId {
@@ -57,13 +58,13 @@
 
  #produktmaerkeId {
     font-family: Playfair Display, sans-serif;
-    font-size: 15px;
+    font-size: 17px;
     color: rgb(123, 121, 121)
  }
 
  #beskrivelseAfProduktId {
    font-family: Poppins, sans-serif;
-   font-size: 22px;
+   font-size: 26px;
    color: var(--beskrivelsesTekst);
    margin: 8px 0px 40px; /* top, right, bottom, left */
    font-weight: 350; /* Hvor tyk skriften skal være - er mere præcis end lighter, bold og bolder */
@@ -73,8 +74,15 @@
    font-family: Poppins, sans-serif;
  }
 
- #farveId, #størrelseId, #lagerstatusId {
-    font-weight: bold;
+/*
+ #farveId, #stoerrelseId, #lagerstatusId {
+    font-weight: ;
+ }
+ */
+
+ #groenPletId {
+  color: var(--tilgaengeligIkon);
+  font-size: large;
  }
 
  #butikkerId {
@@ -83,30 +91,49 @@
 
  #prisId {
   font-family: Poppins, sans-serif;
-  font-size: 24px;
-  font-weight: 300;
+  font-size: 35px;
+  font-weight: 600;
   color: #231F20;
  }
 
  #laegVareIKurvId {
-  width: 33%;
+  width: 78%;
   height: auto;
  }
 
- /* BRUGT TIL AT LAVE BILLEDET LEVERINGSMULIGHEDER
+ /* Her skal klik&hent-knappens funktioner være */
+
+ #leveringsmulighederId {
+  width: 40%;
+  height: auto;
+  margin-top: 25px;
+  margin-bottom: 50px;
+ }
+
+ #produktbeskrivelseId {
+  width: 50%;
+  height: auto;
+ }
+
+ .container {
+  margin-top: 65px; /* Afstanden fra menulinjen ned til teksten Royal Copenhagen og billedet  */
+  display: flex;
+  justify-content: space-center;
+  gap: 80px; /* Mellemrummet mellem billede og information */
+ }
+
+ #venstreSideId {
+  margin-left: 200px; /* 200 */
+ }
+
+ #hoejreSideId {
+  
+ }
+ 
+/* BRUGT TIL AT LAVE BILLEDET LEVERINGSMULIGHEDER
  #test {
   font-family: Poppins, sans-serif;
   font-size: 12px;
   font-weight: 300;
  }
  */
-
- #leveringsmulighederId {
-  width: 15%;
-  height: auto;
- }
-
- 
-
-
- 
